--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -1,10 +1,15 @@
 .composition {
     position: relative;
+
     &__photo {
         width: 55%;
         box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
         border-radius: 2px;
         position: absolute;
+        z-index: 10;
+        transition: all 0.2s;
+        //outline: 0 solid $color-primary;
+        //outline-offset: 2rem;
 
         &--p1{
             left: 0;
@@ -21,7 +26,19 @@
             top: 10rem;
         }
 
+        &:hover {
+            // outline-width: 1.5rem;  -  Outline outdated, forced to mimic with box-shadow
+            transform: scale(1.05) translateY(-0.5rem);
+            box-shadow: 0 0.5rem 1.5rem $color-primary, 0 2.5rem 4rem rgba($color-black, .5);
+            z-index: 20; // Has to be higher than the other
+            
+        }
+
     }
 
+    &:hover &__photo:not(:hover){
+        transform: scale(0.95);
+    }
+    // composition:hover composition__photo:not(:hover) { }
 
 }
