--- a/css/style.css
+++ b/css/style.css
@@ -178,23 +178,52 @@ body {
 .btn-text:link, .btn-text:visited {
   font-size: 1.6rem;
   color: #55c57a;
+  background-color: #f7f7f7;
   display: inline-block;
   text-decoration: none;
+  border-top: 0.05px solid rgba(40, 180, 133, 0.5);
+  border-left: 0.5px solid rgba(40, 180, 133, 0.75);
+  border-right: 0.5px solid rgba(40, 180, 133, 0.75);
   border-bottom: 1.5px solid #28b485;
-  padding: 1rem;
+  box-shadow: 0 0.4rem 1rem rgba(0, 0, 0, 0.15);
+  padding: 1.5rem;
   border-radius: 5rem;
   transition: all 0.2s; }
 
 .btn-text:hover {
   background-color: #55c57a;
   color: #fff;
-  box-shadow: 0 0.8rem 1.2rem rgba(0, 0, 0, 0.15);
-  border-bottom: 4px solid #28b485;
+  box-shadow: 0 0.75rem 1.5rem rgba(0, 0, 0, 0.3);
+  border-bottom: 5px solid #28b485;
   transform: translateY(-2px); }
 
 .btn-text:active {
   transform: translateY(-0.5px);
   border-bottom: 0.5px solid #28b485; }
+
+.btn-text--halt {
+  height: 0px; }
+
+.feature-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  transition: transform 0.2s;
+  height: 45rem;
+  align-content: center; }
+  .feature-box__icon {
+    font-size: 6rem;
+    margin-bottom: 0.5rem;
+    display: inline-block;
+    background-image: linear-gradient(to right, #7ed56f, #28b485);
+    -webkit-background-clip: text;
+    color: transparent; }
+  .feature-box:hover {
+    transform: translateY(-1rem) scale(1.1);
+    box-shadow: 0 2rem 4.5rem rgba(0, 0, 0, 0.4); }
 
 .composition {
   position: relative; }
@@ -276,3 +305,12 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -20vh; }
+
+.section-features {
+  padding: 20rem 0;
+  background-image: linear-gradient(to right bottom, rgba(27, 172, 85, 0.8), rgba(27, 167, 81, 0.799)), url(../img/nat-4.jpg);
+  background-size: cover;
+  transform: skewY(-5deg);
+  margin-top: -8rem; }
+  .section-features > * {
+    transform: skewY(5deg); }
