--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -59,25 +59,35 @@
     &:visited {
         font-size: $default-font-size;
         color: $color-primary;
+        background-color: $color-grey-light-1;
         display: inline-block;
         text-decoration: none;
+        border-top: 0.05px solid rgba($color-primary-dark, 0.5);
+        border-left: 0.5px solid rgba($color-primary-dark, 0.75);
+        border-right: 0.5px solid rgba($color-primary-dark, 0.75);
         border-bottom: 1.5px solid $color-primary-dark;
-        padding: 1rem;
+        box-shadow: 0 0.4rem 1rem rgba($color-black, 0.15);
+        padding: 1.5rem;
         border-radius: 5rem;
         transition: all 0.2s;
+        
     }
 
     &:hover {
         background-color: $color-primary;
         color: $color-white;
-        box-shadow: 0 0.8rem 1.2rem rgba($color-black, 0.15);
-        border-bottom: 4px solid $color-primary-dark;
+        box-shadow: 0 0.75rem 1.5rem rgba($color-black, 0.3);
+        border-bottom: 5px solid $color-primary-dark;
         transform: translateY(-2px);
     }
 
     &:active {
         transform: translateY(-0.5px);
         border-bottom: 0.5px solid $color-primary-dark;
+    }
+
+    &--halt{
+        height: 0px; // Just to prevent the button from stretching out the page
     }
 
 }
